--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,16 +3,38 @@
     <string name="search_hint">Buscar contato</string>
     <string name="title_activity_detalhe">Novo contato</string>
     <string name="nome_do_contato">Nome do contato</string>
+    <string name="filtro_favoritos">Filtrar Favoritos</string>
+    <string name="filtro_todos">Mostrar Todos</string>
     <string name="salvar">Salvar</string>
     <string name="excluir">Excluir</string>
     <string name="nome">Nome</string>
     <string name="fone">Fone</string>
+    <string name="foneComercial">Fone Comercial</string>
     <string name="email">Email</string>
     <string name="lista_vazia">Lista de contatos vazia</string>
     <string name="contato_nao_encontrado">Contato não encontrado</string>
     <string name="contato_adicionado">Contato adicionado</string>
     <string name="contato_alterado">Informações do contato alteradas</string>
     <string name="contato_apagado">Contato removido</string>
+    <string name="escolha_mes">Escolha um mês</string>
+    <string name="barra">/</string>
+    <string name="escolha_dia">Escolha um dia</string>
+    <string name="nascimento">Nascimento</string>
+    <string-array name="meses">
+        <item>Janeiro</item>
+        <item>Fevereiro</item>
+        <item>Março</item>
+        <item>Abril</item>
+        <item>Maio</item>
+        <item>Junho</item>
+        <item>Julho</item>
+        <item>Agosto</item>
+        <item>Setembro</item>
+        <item>Outubro</item>
+        <item>Novembro</item>
+        <item>Dezembro</item>
+    </string-array>
+
 </resources>
 
 
